# wannabe-starchive

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  init.bash  yt-api-test.bash  yt-api-test.py
.github/workflows/: build-backend.yml  build-frontend.yml
backend/: .env  Cargo.toml  Dockerfile
backend/src/: admin.rs  config.rs  crawler.rs  main.rs  models.rs  utils.rs
backend/src/api/: admin.rs  mod.rs  monitor.rs  search.rs  video.rs
backend/src/services/: admin_service.rs  crawler.rs  elasticsearch_service.rs  mod.rs  monitoring.rs  monitoring_service.rs  search_service.rs  video_service.rs
frontend/: Cargo.toml  Dockerfile  Trunk.toml  env_config_generator.sh  index.html  nginx.conf  style.css
frontend/src/: admin.rs  admin_channels.rs  admin_monitor.rs  admin_queue.rs  admin_videos.rs  config.rs  env_variable_utils.rs  main.rs  models.rs  router.rs  utils.rs
frontend/src/admin/: api.rs  components.rs  mod.rs  models.rs  overview.rs  utils.rs
frontend/src/admin/overview/: admin_captions.rs  admin_monitor.rs  admin_queue.rs  admin_videos.rs
frontend/src/search/: api.rs  components.rs  mod.rs  search_options.rs
