[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] } # "csr" for client-side rendering
wasm-bindgen-futures = "0.4"
gloo-net = "0.5" # For making HTTP requests
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.41"
web-sys = { version = "0.3", features = ["console"] } # For logging to browser console
yew-router = "0.18.0"
wasm-bindgen = "0.2.100"
urlencoding = "2.1.3"
serde_json = "1.0.140"
js-sys = "0.3.77"
lazy_static = "1.5.0"